--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ layout: default
 	    	{% if post.title == "Oversight" %}
 	    		<div id="oversight" class="step" data-x="-900" data-y="-300">
 		    {% elsif post.title == "Data Ethics" %}
-	    		<div id="data-ethics" class="step" data-x="0" data-y="-500">
+	    		<div id="ethics" class="step" data-x="0" data-y="-500">
 		    {% elsif post.title == "Risk-Benefit Analysis" %}
 	    		<div id="risk-benefit-analysis" class="step" data-x="900" data-y="-300">
 		    {% elsif post.title == "Use of Data" %}
-	    		<div id="use-of-data" class="step" data-x="900" data-y="300">
+	    		<div id="use" class="step" data-x="900" data-y="300">
 			{% elsif post.title == "Data" %}
-	    		<div id="data" class="step" data-x="0" data-y="500">
+	    		<div id="what-data" class="step" data-x="0" data-y="500">
 		    {% elsif post.title == "Verifying & Cleaning" %}
 	    		<div id="verifying-cleaning" class="step" data-x="-900" data-y="300">
 		    {% else %}
