--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: default
 	    {% for post in site.posts reversed %}
 	    	{% if post.title == "Oversight" %}
 	    		<div id="oversight" class="step" data-x="-900" data-y="-300">
-		    {% elsif post.title == "Data Ethics" %}
+		    {% elsif post.title == "Ethics" %}
 	    		<div id="ethics" class="step" data-x="0" data-y="-500">
 		    {% elsif post.title == "Risk-Benefit Analysis" %}
 	    		<div id="risk-benefit-analysis" class="step" data-x="900" data-y="-300">
-		    {% elsif post.title == "Use of Data" %}
+		    {% elsif post.title == "Use" %}
 	    		<div id="use" class="step" data-x="900" data-y="300">
 			{% elsif post.title == "Data" %}
 	    		<div id="what-data" class="step" data-x="0" data-y="500">
