--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 	    		<div id="risk-benefit-analysis" class="step" data-x="900" data-y="-300">
 		    {% elsif post.title == "Use" %}
 	    		<div id="use" class="step" data-x="900" data-y="300">
-			{% elsif post.title == "Data" %}
+			{% elsif post.title == "What Data" %}
 	    		<div id="what-data" class="step" data-x="0" data-y="500">
 		    {% elsif post.title == "Verifying & Cleaning" %}
 	    		<div id="verifying-cleaning" class="step" data-x="-900" data-y="300">
