--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ layout: default
 	    		<div id="use" class="step" data-x="900" data-y="300">
 			{% elsif post.title == "What Data" %}
 	    		<div id="what-data" class="step" data-x="0" data-y="500">
-		    {% elsif post.title == "Verifying & Cleaning" %}
-	    		<div id="verifying-cleaning" class="step" data-x="-900" data-y="300">
+		    {% elsif post.title == "Identifying skill sets needed" %}
+	    		<div id="identify" class="step" data-x="-900" data-y="300">
 		    {% else %}
 		    	<div class="step">
 		    {%endif %}
