--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <!-- <section class="main-content" id="impress"> -->
 
 	    {% for post in site.posts reversed %}
-	    	{% if post.title == "Oversight" %}
-	    		<div id="oversight" class="step" data-x="-900" data-y="-300">
+	    	{% if post.title == "Accountability & M&E" %}
+	    		<div id="accountability" class="step" data-x="-900" data-y="-300">
 		    {% elsif post.title == "Ethics" %}
 	    		<div id="ethics" class="step" data-x="0" data-y="-500">
 		    {% elsif post.title == "Risk-Benefit Analysis" %}
